# fsgrid

./: .gitignore  CMakeLists.txt  Makefile  README.md  fsgrid.hpp
src/: CMakeLists.txt  fsgrid.hpp  main.cpp
tests/: CMakeLists.txt  Makefile  analysator-test.py  benchmark.cpp  ddtest.cpp  test-dd.sh  test.cpp
tests/mpi_tests/: CMakeLists.txt  core_tests.cpp  data_transfer.cpp  domain_decomposition.cpp  foo.cpp
tests/old_tests/: Makefile  ddtest.cpp
tests/unit_tests/: CMakeLists.txt  foo.cpp
